# GameOfLife

./: CMakeLists.txt  main.cpp  timer.h
